--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_exercise_after.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_exercise_after.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/txtWhichPosition"
+        android:id="@+id/txt1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -86,7 +86,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/txtWhichPosition"
+        app:layout_constraintBottom_toTopOf="@+id/txt1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
@@ -103,6 +103,6 @@
         app:layout_constraintBottom_toTopOf="@+id/btnHomeScreen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtWhichPosition"/>
+        app:layout_constraintTop_toBottomOf="@+id/txt1"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
