--- a/Aplikace_rehabilitace/app/src/main/res/values/colors.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="colorLightYellow">#fff8be</color>
     <color name="colorDarkYellow">#e9e3b1</color>
     <color name="colorGray">#cac4d0</color>
+    <color name="colorDarkGray">#4E4E4E</color>
     <color name="colorLightBlueGray">#77A3D8</color>
 </resources>
