--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_exercise.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_exercise.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="24dp"
         android:fontFamily="@font/roboto"
         android:text="@string/_1_4_poloh"
         android:textAlignment="center"
@@ -55,7 +55,7 @@
         android:textAlignment="center"
         android:textColor="@color/colorBlue"
         android:textSize="48sp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/txt1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -66,7 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="24dp"
         android:fontFamily="@font/roboto"
         android:text="@string/pritlak_provadejte"
         android:textAlignment="center"
@@ -101,7 +101,6 @@
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.503"
         app:srcCompat="@drawable/pos1" />
 
     <ImageView
