--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_exercise_after.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_exercise_after.xml
@@ -19,7 +19,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.033"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="522dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView15" />
 
     <ImageButton
         android:id="@+id/btnMessage"
@@ -81,12 +81,10 @@
     <ImageView
         android:id="@+id/imageView15"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="350dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/txt1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
