--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_set_therapy6.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_set_therapy6.xml
@@ -79,8 +79,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cbChciSeZapojit" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView11"
