--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_start_exercise.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_start_exercise.xml
@@ -44,7 +44,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="24dp"
         android:fontFamily="@font/roboto"
@@ -52,8 +51,7 @@
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/btnStartTherapy"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView10" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView10"
@@ -62,6 +60,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
